--------------------------------------------------------------------------------
drkns 06.08.2022 11:11:06 +0100 - build 6008

1. Fix Undo issue after 5916 & continue #0003907.

--------------------------------------------------------------------------------
drkns 05.08.2022 20:04:28 +0100 - build 6007

1. Improve exception diagnostics.

--------------------------------------------------------------------------------
drkns 04.08.2022 20:33:22 +0100 - build 6006

1. Fix filters issue after swapping panels.

2. Suppress plugin selection dialog during search.

--------------------------------------------------------------------------------
drkns 02.08.2022 22:50:15 +0100 - build 6005

1. "[x] Search in archives" was trying to read directories.

--------------------------------------------------------------------------------
drkns 02.08.2022 19:47:00 +0100 - build 6004

1. Correction of 5600.

2. Correction of 5983.

--------------------------------------------------------------------------------
drkns 01.08.2022 20:30:44 +0100 - build 6003

1. Extend RGB color picker.

2. Restore w2k compatibility.

3. Minor fixes.

--------------------------------------------------------------------------------
drkns 01.08.2022 02:51:40 +0100 - build 6002

1. Extend 256 color picker.

--------------------------------------------------------------------------------
drkns 30.07.2022 22:27:06 +0100 - build 6001

1. Refactoring.

2. Improve exception diagnostics.

3. Support UTF-8 in far.exe.ini.

4. Correction of 5936.

5. Correction of 5998.

--------------------------------------------------------------------------------
drkns 22.07.2022 23:55:11 +0100 - build 6000

1. Refactoring.

--------------------------------------------------------------------------------
yjh 22.07.2022 01:34:04 +0300 - build 5999

1. SQLite v3.39.2.

--------------------------------------------------------------------------------
drkns 17.07.2022 17:54:30 +0100 - build 5998
