@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 06.08.2022 15:34:28 +0100 - build 6009
+
+1. Improve exception diagnostics.
+
+--------------------------------------------------------------------------------
 drkns 06.08.2022 11:11:06 +0100 - build 6008
 
 1. Fix Undo issue after 5916 & continue #0003907.
